# drf-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/: README.md  adding-a-new-app.md  architecture.md  celery-tasks.md  deployment.md  testing.md  utilities-reference.md
docs/specs/: _TEMPLATE.md  users.md
docs/technical/: adding-a-new-app.md  api-conventions.md  architecture.md  celery-tasks.md  deployment.md  testing.md  utilities-reference.md
docs/technical/adr/: 0001-hacksoft-styleguide.md
src/: conftest.py  pytest.ini
src/api/: exception_handlers.py  mixins.py  pagination.py  utils.py
src/main/: __init__.py  urls.py
src/main/settings/: __init__.py  base.py  caches.py  celery.py  config.py  cors.py  email.py  files_and_storages.py  jwt.py  sentry.py  spectacular.py  tasks.py
src/requirements/: base.txt  dev.txt
src/users/: admin.py  apis.py  factories.py  filters.py  models.py  selectors.py  services.py  tasks.py  urls.py
src/users/migrations/: 0001_initial.py
src/users/tests/: test_apis.py  test_models.py  test_selectors.py  test_services.py  test_unit.py
src/utils/: cache.py  filters.py  managers.py  serializers.py  services.py  tasks.py
