[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["main", "core", "api", "utils", "users"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
