[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.14"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests that don't require database access (fast)",
    "integration: Integration tests that require database access (slower)",
    "e2e: End-to-end tests that test complete user flows",
]
addopts = "--verbose --strict-markers --tb=short --reuse-db"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.pyright]
typeCheckingMode = "basic"
extraPaths = ["src"]
stubPath = "typings"

[tool.django-stubs]
django_settings_module = "main.settings.base"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "src"
explicit_package_bases = true
strict = false
ignore_missing_imports = true
check_untyped_defs = true
